AKS/Lab2/yamls/network-policies/allow-prod-store.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prod-store
  namespace: prod
spec:
  podSelector:
    matchLabels:
      app: store-front
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.0.1.0/24
      ports:
        - port: 443
        - port: 80
        - port: 8080
