AKS/Lab2/yamls/network-policies/block-dev-rmq.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-dev-rmq
  namespace: dev-rmq
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              env: dev
          podSelector:
            matchLabels:
              app: order-service
      ports:
      - port: 5672
      - port: 15672
