AKS/Lab2/yamls/network-policies/block-prod-rmq.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-prod-rmq
  namespace: prod-rmq
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              env: prod
          podSelector:
            matchLabels:
              app: order-service
      ports:
      - port: 5672
      - port: 15672
  egress: []
